--- a/public/resource/style.css
+++ b/public/resource/style.css
@@ -10668,6 +10668,6 @@ h4,
     width: 80%; /* Could be more or less, depending on screen size */
 }
 
-#wrap > .container, #account-information {
+#list-page, #chapter-big-container, #truyen, #account-information {
     min-height: calc(100vh - 200px);
 }
